Fixed bug with hamburger icon getting overlapped, increased margin in mobile viewports, playlist section - various UI tweaks

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,10 +6,17 @@ html, body, #container-main {
   background-color: #fbfbfb; }
 
 #about, #playlist, #video, #search {
-  margin: 0 0.5em; }
+  margin: 0 1em; }
 
 .body-fixed-nav {
   padding-top: 40px; }
+
+.content-container {
+  border: 1px solid #E7E7E7;
+  background-color: #F8F8F8;
+  padding: 1em;
+  margin: 1em;
+  border-radius: 0.5em; }
 
 @media screen and (min-width: 768px) {
   body #animate-view-container .animate-view #playlist, body #animate-view-container .animate-view #results-container {
@@ -115,7 +122,8 @@ body #page-header #header-wrapper #credit {
   top: 0;
   bottom: 0;
   left: 10px;
-  right: 0; }
+  right: 0;
+  z-index: -1; }
 
 @media screen and (min-width: 364px) {
   #header-menu {
@@ -465,6 +473,9 @@ body #page-header #header-wrapper #credit {
 
 .search-modal-input {
   margin: 0 auto; }
+
+.panel-default > .panel-heading {
+  background-color: #fff; }
 
 @media screen and (min-width: 403px) {
   .search-modal-input {
