--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -7,11 +7,20 @@ html,body, #container-main {
 }
 
 #about, #playlist, #video, #search {
-	margin: 0 0.5em;
+	margin: 0 1em;
 }
 
 .body-fixed-nav {
 	padding-top: 40px;
+}
+
+.content-container {
+	border: 1px solid #E7E7E7;
+	background-color: #F8F8F8;
+	// display: inline-block;
+	padding: 1em;
+	margin: 1em;
+	border-radius: 0.5em;
 }
 
 
