--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -40,6 +40,7 @@
     bottom: 0;
     left: 10px;
     right: 0;
+    z-index: -1;
 }
 
 @media screen and ($mobile4){
